# stunning-spork

./: pyproject.toml
meu_projeto/: Board.py  Symbol.py  main.py  position_searcher_validation.py  recursivo.py
meu_projeto/board/: Board.py  BoardFeedback.py  DrawFeedback.py  WinnerFeedback.py
meu_projeto/pages/: MainMenu.py  MultiplayerPage.py  PlayablePage.py  SinglePlayerPage.py
meu_projeto/players/: Computer.py  Human.py  Player.py
meu_projeto/players/strategies/: ColumnStrategy.py  LineStrategy.py  MainDiagonalStrategy.py  MoveNode.py  PositionSearcher.py  SecondaryDiagonalStrategy.py  Strategies.py  Strategy.py
tests/: test_meu_projeto.py
tests/players/strategies/: test_strategy.py
