[tool.poetry]
name = "meu_projeto"
version = "0.1.0"
description = ""
authors = ["brunobarros <1232097@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psutil = "^5.9.1"
colorama = "^0.4.5"
blue = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
